--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -3507,15 +3507,15 @@ Default: true.
 If true, check data for non-ascii characters.
 Default: true.
 @item _R_CHECK_SKIP_ARCH_
-Comma-separated list of architectutes that will be omitted from
+Comma-separated list of architectures that will be omitted from
 checking in a multi-arch setup.
 Default: none.
 @item _R_CHECK_SKIP_TESTS_ARCH_
-Comma-separated list of architectutes that will be omitted from
+Comma-separated list of architectures that will be omitted from
 running tests in a multi-arch setup.
 Default:none.
 @item _R_CHECK_SKIP_EXAMPLES_ARCH_
-Comma-separated list of architectutes that will be omitted from
+Comma-separated list of architectures that will be omitted from
 running examples in a multi-arch setup.
 Default:none.
 @end vtable
