update some comments
git-svn-id: https://svn.r-project.org/R/trunk@53410 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/tools/README
+++ b/tools/README
@@ -26,7 +26,7 @@ The files are as follows.
 	get the name of the distribution tarball.
   GETMAKEVAL
 	get the value of a Make variable from a Makefile [this needs to
-	be improved].
+	be improved].  Used by configure.
   GETVERSION
 	create API 'Rversion.h' from 'VERSION' and 'SVN-REVISION'.
   
