move over to R script for WiX installer
git-svn-id: https://svn.r-project.org/R/trunk@53431 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1292,8 +1292,8 @@ installer image.
 
 It is also possible to build an installer for use with Microsoft
 Installer.  This is intended for use by sysadmins doing automated
-installs, and is not recommended for casual use.  It is only supported
-for 32-bit Windows at present.
+installs, and is not recommended for casual use.  @emph{It is only
+supported for 32-bit Windows at present.}
 
 It makes use of the Windows Installer XML (WiX) toolkit @emph{version
 2.0} available from @uref{http://wix.sourceforge.net/}.  (This needs the
@@ -1315,7 +1315,7 @@ make msi
 @end example
 
 @noindent
-which will results in a file of about 45Mb with a name like
+which will results in a file of about 50Mb with a name like
 @file{@value{RWVERSION}-win32.msi}.  This can be double-clicked to be
 installed, but those who need it will know what to do with it.
 
