First pass at Wix 3.0 installer
git-svn-id: https://svn.r-project.org/R/trunk@53438 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1295,12 +1295,8 @@ Installer.  This is intended for use by sysadmins doing automated
 installs, and is not recommended for casual use.
 
 It makes use of the Windows Installer XML (WiX) toolkit @emph{version
-2.0} available from @uref{http://wix.sourceforge.net/}.  (This needs the
-.NET 1.1 framework installed: it ran on a vanilla Windows XP SP2
-machine. Unfortunately the file format has been changed within the same
-version: currently our code works with release 2.0.5805.0 -- the latter
-is said to be `production/stable'.)  Once WiX is installed, set the path
-to its home directory in @file{MkRules.local}.
+3.0} available from @uref{http://wix.sourceforge.net/}.  Once WiX is
+installed, set the path to its home directory in @file{MkRules.local}.
 
 You need to have the files for a complete R build, including bitmap and
 Tcl/Tk support and the manuals, as well as the recommended packages.
