--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1313,10 +1313,14 @@ make msi
 which will results in a file a name like
 @file{@value{RWVERSION}-win.msi}.  This can be double-clicked to be
 installed, but those who need it will know what to do with it (usually
-by running @command{msiexec /i} with additional options).
+by running @command{msiexec /i} with additional options).  Properties
+that users might want to set from the @command{msiexec} command line
+include @samp{ALLUSERS}, @samp{INSTALLDIR} (something like
+@file{c:\Program Files\R}) and @samp{RMENU} (the path to the @samp{R}
+folder on the start menu)
 
 As from @R{} 2.12.1 the MSI installer can be built both for a 32-bit
-build of @R{} or for a 64-bit build of @R{} (optionally including 32-bit
+build of @R{} and for a 64-bit build of @R{} (optionally including 32-bit
 files).  Unlike the main installer, a 64-bit MSI installer can only be
 installed on a 64-bit system.
 
