--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -1215,7 +1215,7 @@ On Windows there is normally a choice between linking to an import
 library or directly to a DLL.  Where possible, the latter is much more
 reliable: import libraries are tied to a specific toolchain, and in
 particular on 64-bit Windows two different conventions are common, and
-@R{} 2.11.x and 2.12.x use different ones. So for example instead of
+@R{} 2.11.x and 2.12.x use different ones.  So for example instead of
 
 @example
 PKG_LIBS = -L$(XML_DIR)/lib -lxml2
@@ -6613,18 +6613,17 @@ PKG_LIBS=$(PKGB_PATH)/libpackB.a
 @end example
 
 @noindent
-(If @file{libpackB.a} itself depends on other libraries these will need
-to be included in @code{PKG_LIBS}.)
-
-@noindent
 which will give an empty path component if sub-architectures are not in
 use (but works on current platforms).
+(If @file{libpackB.a} itself depends on other libraries these will need
+to be included in @code{PKG_LIBS}.)
 
 For a dynamic library @file{packB/libs/libpackB.so}
 (@file{packB/libs/libpackB.dylib} on Mac OS X) we could use
 
 @example
-PKGB_PATH=`echo 'library(packB); cat(system.file("libs", package="packB"))' \
+PKGB_PATH=`echo 'library(packB); \
+  cat(system.file("libs", .Platform$r_arch, package="packB"))' \
  | $@{R_HOME@}/bin/R --vanilla --slave`
 PKG_LIBS=-L"$(PKGB_PATH)" -lpackB
 @end example
@@ -6639,8 +6638,10 @@ some platforms) @env{LD_RUN_PATH} or @env{LD_LIBRARY_PATH} or adding to
 the @command{ld.so} cache (see @command{man ldconfig}).  On platforms
 that support it, the path to the dynamic library can be hardcoded at
 install time (which assumes that the location of package @pkg{packB}
-will not be changed).  On systems with the @acronym{GNU} linker (e.g.@:
-Linux) and some others (e.g.@: Mac OS X) this can be done by
+will not be changed) nor the package updated to a changed API, as
+@pkg{Rcpp} has done all too often).  On systems with the @acronym{GNU}
+linker (e.g.@: Linux) and some others (e.g.@: Mac OS X) this can be done
+by
 
 @example
 PKGB_PATH=`echo 'library(packB); cat(system.file("libs", package="packB"))' \
